# cgu_Recipe_Generator

./: .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_INSTRUCTION.md  README.md  REPORT_SUMMARY.md  config.py  docker-compose.yml  frontend.md  main.py  package-lock.json  package.json  pyproject.toml
agents/: Agent 1 Data Collector & Preprocessor.md  Agent 6 Web Interface Coordinator.md
data_collection/: README.md  extract_recipes.py  fetcher.py  preprocess.py  preprocess_ingredient.py  preprocess_recipe.py
data_preprocessing/: PREPROCESS_PLAN.md  PREPROCESS_SUMMARY.md  full_preprocess.py  phase1_data_assessment.py  phase2_text_extraction.py  phase3_ingredient_parsing.py  phase4_instruction_processing.py  phase5_structure_output.py  phase6_validation.py  phase7_tfidf_preprocessing.py
food_classified/: README.md  SUMMARY_INGREDIENT_CLASSIFICATION.md  __init__.py  __main__.py  dataset.py  inference.py  loader.py  model.py  paths.py  trainer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
n_gram/: N_GRAM_SUMMARY.md  __init__.py  __main__.py  loader.py  model.py  suggester.py  trainer.py
server/: INDEX_SERVICE_FLOW_SUMMARY.md  SEARCH_SERVICE_FLOW_SUMMARY.md  main.py
server/routes/: recipes.py  search.py
server/schemas/: recipe.py  (+1 more)
tests/: conftest.py  test_tfidf_indexer.py  test_tfidf_loader.py  test_tfidf_searcher.py  test_tfidf_similarity.py
tf_idf/: TF_TDF_SUMMARY.md  __init__.py  __main__.py  indexer.py  loader.py  searcher.py  similarity.py
(+16 files in other folders)
