[project]
name = "cgu-recipe-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "nltk>=3.9.3",
    "pandas>=2.0.0,<3",
    "plotly>=5.0.0",
    "requests>=2.32.5",
    "streamlit>=1.40.0",
    "tensorflow>=2.21.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]
