[project]
name = "cgu-recipe-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "datasets>=2.20.0",
    "dotenv>=0.9.9",
    "extruct>=0.18.0",
    "nltk>=3.9.3",
    "pandas>=2.0.0,<3",
    "plotly>=5.0.0",
    "requests>=2.32.5",
    "streamlit>=1.40.0",
    "tensorflow>=2.21.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]
